src/objects/DRCTS__Directories__c.object
<CustomObject>
    <fields>
        <fullName>DRCTS__Logo__c</fullName>
        <description>Defines the image path for the logo to be displayed in the directory.</description>
        <inlineHelpText>Defines the image path for the logo to be displayed in the directory.</inlineHelpText>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DRCTS__Name_Field__c</fullName>
        <description>This field contains the api name of the field used for the name position in the detail view.</description>
        <inlineHelpText>This field contains the api name of the field used for the name position in the detail view.</inlineHelpText>
        <label>Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__NavBar_Background_Color__c</fullName>
        <description>Background color of the detail navigation bar.</description>
        <inlineHelpText>Background color of the detail navigation bar.</inlineHelpText>
        <label>NavBar Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__NavBar_Text_Color_Highlight__c</fullName>
        <description>Text highlight color of the directories filter bar and detail navigation bar.</description>
        <inlineHelpText>Text highlight color of the directories filter bar and detail navigation bar.</inlineHelpText>
        <label>NavBar Highlight Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__NavBar_Text_Color__c</fullName>
        <description>Text color of the directories filter bar and detail navigation bar.</description>
        <inlineHelpText>Text color of the directories filter bar and detail navigation bar.</inlineHelpText>
        <label>NavBar Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Navigation_Button_Background_Color__c</fullName>
        <description>Background color of the navigation buttons.</description>
        <inlineHelpText>Background color of the navigation buttons.</inlineHelpText>
        <label>Navigation Button Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Object__c</fullName>
        <description>Define the API name of the object to be displayed in the directory.</description>
        <inlineHelpText>Define the API name of the object to be displayed in the directory.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Order__c</fullName>
        <description>This field defines the order in which related lists are presented on the detail page.</description>
        <inlineHelpText>This field defines the order in which related lists are presented on the detail page.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRCTS__Parent_Directory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to the parent directory</description>
        <inlineHelpText>Linked to the parent directory</inlineHelpText>
        <label>Parent Directory</label>
        <referenceTo>DRCTS__Directories__c</referenceTo>
        <relationshipLabel>Directories</relationshipLabel>
        <relationshipName>Directories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRCTS__Primary_Button_Color__c</fullName>
        <description>Background color of all primary buttons.</description>
        <inlineHelpText>Background color of all primary buttons.</inlineHelpText>
        <label>Primary Button Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Primary_Button_Text_Color__c</fullName>
        <description>Text color of all primary buttons.</description>
        <inlineHelpText>Text color of all primary buttons.</inlineHelpText>
        <label>Primary Button Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Profile_Fields__c</fullName>
        <description>This field contains the api names of the fields used for the detail view.</description>
        <inlineHelpText>This field contains the api names of the fields used for the detail view.</inlineHelpText>
        <label>Profile Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Radius_Values__c</fullName>
        <description>This field contains the numerical values (CSV) to be presented as options to refine my search.</description>
        <inlineHelpText>This field contains the numerical values (CSV) to be presented as options to refine my search.</inlineHelpText>
        <label>Radius Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Record_Text_Color__c</fullName>
        <description>Color of return record text. Valid hexadecimal notation required.</description>
        <inlineHelpText>Color of return record text. Valid hexadecimal notation required.</inlineHelpText>
        <label>Record Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Related_List_Filter__c</fullName>
        <description>This field contains the filter for the related lists.</description>
        <inlineHelpText>This field contains the filter for the related lists.</inlineHelpText>
        <label>Related List Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Relationship_Name__c</fullName>
        <description>** System calculated ** This field contains the relationship name of the related lists.</description>
        <inlineHelpText>** System calculated ** This field contains the relationship name of the related lists.</inlineHelpText>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Restrict_Access_to_Authenticated_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the directory will be visible to only authenticated users navigating to the directory URL.</description>
        <inlineHelpText>When checked the directory will be visible to only authenticated users navigating to the directory URL.</inlineHelpText>
        <label>Restrict Access to Authenticated User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Right_Column_Field_1_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position 5 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Right_Column_Field_1__c</fullName>
        <description>This field contains the api name of the field used for the right column position 1 in the enhanced list view.</description>
        <inlineHelpText>This field contains the api name of the field used for the right column position 1 in the enhanced list view.</inlineHelpText>
        <label>Position 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Right_Column_Field_2_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position 6 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Right_Column_Field_2__c</fullName>
        <description>This field contains the api name of the field used for the right column position 2 in the enhanced list view.</description>
        <inlineHelpText>This field contains the api name of the field used for the right column position 2 in the enhanced list view.</inlineHelpText>
        <label>Position 6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Search_Bar_Background_Color__c</fullName>
        <description>Background color of the search bar.</description>
        <inlineHelpText>Background color of the search bar.</inlineHelpText>
        <label>Search Bar Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Search_Fields__c</fullName>
        <description>This field contains text field names (CSV) available for searches.</description>
        <inlineHelpText>This field contains text field names (CSV) available for searches.</inlineHelpText>
        <label>Search Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Show_Field_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, it will show the field labels for all the fields the user drags and drops for the additional fields component in the detail view.</description>
        <inlineHelpText>If checked, it will show the field labels for all the fields the user drags and drops for the additional fields component in the detail view.</inlineHelpText>
        <label>Show Field Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Sort_Fields__c</fullName>
        <description>This field contains the api names (CSV) of the fields used to sort the results in the geo-location and enhanced list views.</description>
        <inlineHelpText>This field contains the api names (CSV) of the fields used to sort the results in the geo-location and enhanced list views.</inlineHelpText>
        <label>Sort Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Table_Display_Results__c</fullName>
        <description>The value entered in this field is the number of results returned for each page on the table view</description>
        <inlineHelpText>The value entered in this field is the number of results returned for each page on the table view</inlineHelpText>
        <label>Display Results</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRCTS__Text_Color__c</fullName>
        <description>Color of return record text</description>
        <inlineHelpText>Color of return record text</inlineHelpText>
        <label>Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_Action_Button_Field__c</fullName>
        <description>Select the appropriate action button field.</description>
        <inlineHelpText>Select the appropriate action button field.</inlineHelpText>
        <label>Action Button Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_Action_Button_Label__c</fullName>
        <description>Enter the text to display on the action button. Limited to 10 characters.</description>
        <inlineHelpText>Enter the text to display on the action button. Limited to 10 characters.</inlineHelpText>
        <label>Action Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_Enable_Action_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this will enable the action button on the front end.</description>
        <inlineHelpText>When checked, this will enable the action button on the front end.</inlineHelpText>
        <label>Enable Action Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_Image_Field__c</fullName>
        <description>This field contains the api name of the image field to be displayed in the Tile List view.</description>
        <inlineHelpText>This field contains the api name of the image field to be displayed in the Tile List view.</inlineHelpText>
        <label>Image Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_List_Display_Results__c</fullName>
        <description>The value entered in this field is the number of results returned for each page on the Tile List view.</description>
        <inlineHelpText>The value entered in this field is the number of results returned for each page on the Tile List view.</inlineHelpText>
        <label>Display Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_Placeholder_Image__c</fullName>
        <description>Browse for files or paste in a URL.</description>
        <inlineHelpText>Browse for files or paste in a URL.</inlineHelpText>
        <label>Placeholder Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_Position_Field_1_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position Field 1 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_Position_Field_1__c</fullName>
        <description>This field contains the api name of the field used for the position 1 in the Tile List view.</description>
        <inlineHelpText>This field contains the api name of the field used for the position 1 in the Tile List view.</inlineHelpText>
        <label>Position Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_Position_Field_2_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position Field 2 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_Position_Field_2__c</fullName>
        <description>This field contains the api name of the field used for the position 2 in the Tile List view.</description>
        <inlineHelpText>This field contains the api name of the field used for the position 2 in the Tile List view.</inlineHelpText>
        <label>Position Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_Position_Field_3_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position Field 3 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Tile_Position_Field_3__c</fullName>
        <description>This field contains the api name of the field used for the position 3 in the Tile List view.</description>
        <inlineHelpText>This field contains the api name of the field used for the position 3 in the Tile List view.</inlineHelpText>
        <label>Position Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_URL__c</fullName>
        <formula>&apos;https://fontevacustomer-160ec05bb8f.force.com/s/searchdirectory?id=&apos; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Directory URL</label>
        <type>Text</type>
    </fields>
    <label>Directories</label>
    <listViews>
        <fullName>DRCTS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DRCTS__Parent_Directories</fullName>
        <columns>NAME</columns>
        <columns>DRCTS__Object__c</columns>
        <columns>DRCTS__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DRCTS__Is_Parent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Parent Directories</label>
    </listViews>
    <nameField>
        <label>Enhanced Directory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Directories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>